# hermes2d

./: .gitignore  AUTHORS  CMake.vars  CMakeLists.txt  Make.config.Debian  Make.config.MacOS  Make.config.example  Makefile  README  README-Mac  README-Win  README-Win-MSVC2008  hermes2d-cplx.dev  hermes2d-real.dev  index.html  spkg-install
benchmarks/: CMake.common  CMakeLists.txt
benchmarks/anisopoly/: CMakeLists.txt  run
benchmarks/bessel/: CMakeLists.txt  bessel.cpp  forms.cpp  main.cpp  plot_graph.py  run
benchmarks/kellogg/: CMakeLists.txt  forms.cpp  main.cpp  run
benchmarks/layer/: CMakeLists.txt  forms.cpp  layer.dev  main.cpp  run
benchmarks/layer-2/: CMakeLists.txt  forms.cpp  main.cpp  run
benchmarks/layer-interior/: main.cpp
benchmarks/line-sing/: CMakeLists.txt  main.cpp  run
benchmarks/line-singularity/: CMakeLists.txt  forms.cpp  main.cpp  run
benchmarks/lshape/: 21-lshape.dev  CMakeLists.txt  exact_solution.cpp  forms.cpp  lshape.dev  main.cpp  run
benchmarks/lshape-square/: CMakeLists.txt  domain.mesh  exact_solution.cpp  main.cpp  run
benchmarks/neutronics-2-group-adapt/: CMakeLists.txt  forms.cpp  main.cpp  run  run_prep_img
benchmarks/neutronics-heat-conduction/: CMakeLists.txt  forms.cpp  main.cpp
benchmarks/neutronics-heat-conduction-adapt/: CMakeLists.txt  forms.cpp  main.cpp
benchmarks/nist-1/: exact_solution.cpp  forms.cpp  main.cpp  nist-1
benchmarks/nist-4/: main.cpp
benchmarks/nist-7/: main.cpp
benchmarks/nist-9/: exact_solution.cpp  forms.cpp  main.cpp
benchmarks/screen/: 25-screen.dev  CMakeLists.txt  exact_sol.cpp  main.cpp  run  screen.dev
benchmarks/singpert/: CMakeLists.txt  main.cpp  run
benchmarks/singpert-aniso/: main.cpp  run
benchmarks/smooth/: CMakeLists.txt  main.cpp  run  smooth.dev
benchmarks/smooth-aniso-x/: CMakeLists.txt  main.cpp  run
benchmarks/smooth-aniso-y/: CMakeLists.txt  main.cpp  plot_graph.py  run  smooth-aniso-y.dev
benchmarks/smooth-iso/: CMakeLists.txt  main.cpp  run  smooth-iso.dev
examples/: CMake.common  CMakeLists.txt  Make.common  README
examples/01-mesh/: 01-mesh.dev  Makefile  main.cpp
examples/02-space/: 02-space.dev  Makefile  main.cpp
examples/03-poisson/: 03-poisson.dev  Makefile  main.cpp
examples/04-bc-dirichlet/: 04-bc-dirichlet.dev  Makefile  domain.mesh  main.cpp
examples/05-bc-neumann/: 05-bc-neumann.dev  Makefile  main.cpp
examples/06-bc-newton/: 06-bc-newton.dev  CMakeLists.txt  Makefile  main.cpp
examples/07-system/: 07-system.dev  CMakeLists.txt  Makefile  main.cpp
examples/08-time-dep/: 08-time-dep.dev  CMakeLists.txt  Makefile  main.cpp
examples/08-timedep/: 08-timedep.dev  main.cpp
examples/09-adapt/: 09-adapt.dev  CMakeLists.txt  Makefile  main.cpp  motor.mesh
examples/10-adapt-system/: 10-adapt-system.dev  CMakeLists.txt  Makefile  bracket.mesh  main.cpp
examples/13-multimesh/: CMakeLists.txt  domain_round_3.mesh  main.cpp
examples/21-lshape/: 21-lshape.dev  CMakeLists.txt  Makefile  main.cpp
examples/22-layer/: 22-layer.dev  Makefile  main.cpp
examples/23-singpert/: CMakeLists.txt  main.cpp
examples/24-bessel/: 24-bessel.dev  Makefile  bessel.cpp  main.cpp
examples/25-screen/: 25-screen.dev  CMakeLists.txt  Makefile  main.cpp  screen-quad.mesh  screen-tri.mesh
examples/26-crack/: 26-crack.dev  CMakeLists.txt  crack-2.mesh  main.cpp
examples/27-waveguide/: 27-waveguide.dev  main.cpp
examples/28-ns-timedep/: 28-ns-timedep.dev  domain-quad.mesh  main.cpp
examples/30-newton-elliptic/: Makefile  main.cpp  square.mesh
examples/31-newton-heat-timedep/: CMakeLists.txt  Makefile  main.cpp
examples/31-newton-timedep/: main.cpp
examples/32-newton-heat-timedep-adapt/: CMakeLists.txt  forms.cpp  main.cpp  square.mesh
examples/33-gross-pitaevski-timedep/: Makefile  main.cpp
examples/33-newton-gp-timedep/: CMakeLists.txt  Makefile  forms.cpp  main.cpp
examples/34-newton-gp-timedep-adapt/: CMakeLists.txt  Makefile  forms.cpp  main.cpp
examples/35-newton-ns-timedep/: 34-newton-ns-timedep.dev  domain.mesh  main.cpp
examples/36-ns-timedep-adapt/: CMakeLists.txt  domain.mesh
examples/40-hdiv/: CMakeLists.txt
examples/42-l2/: CMakeLists.txt  main.cpp
examples/bessel/: 24-bessel.dev  CMakeLists.txt  bessel.cpp  main.cpp
examples/bracket/: CMakeLists.txt  main.cpp  run
examples/crack/: 26-crack.dev  crack-2.mesh  forms.cpp  main.cpp  run
examples/crack-long/: main.cpp
examples/elmag-field/: CMakeLists.txt  domain2.mesh  main.cpp  plot_graph.py  run
examples/hdiv/: .gitignore  CMakeLists.txt  main.cpp
examples/heat-and-moisture/: CMakeLists.txt  forms.cpp  main.cpp
examples/iron-water/: CMakeLists.txt  forms.cpp  iron-water.dev  main.cpp  run
examples/l2/: CMakeLists.txt  main.cpp
examples/layer/: 22-layer.dev  main.cpp
examples/saphir/: run  (+4 more)
hermes_common/: CMakeLists.txt  _hermes_common.cpp  _hermes_common.pxd  _hermes_common.pyx  _hermes_common_api.h  _hermes_common_api_new.cpp  _hermes_common_api_new.h  common_time_period.cpp  common_time_period.h  convert_api.py  matrix.cpp  matrix.h  python_api.cpp  python_api.h  python_solvers.cpp  python_solvers.h  solvers.cpp  solvers.h  sparselib_solver.cpp  stdcython.cpp  stdcython.h  superlu_solver.cpp  umfpack_solver.cpp
python/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  CMakeLists.txt  Makefile  README  c02.pyx  c04.pyx  c05.pyx  c06.pyx  c07.pyx  c08.pyx  hermes2d.pxd  hermes2d.pyx  show_mesh.py  test
src/: CMakeLists.txt  Makefile  adapt.cpp  adapt.h  adapt_base.h  adapt_h1.cpp  adapt_h1.h  adapt_ortho_h1.cpp  adapt_ortho_h1.h  adapt_ortho_hcurl.cpp  adapt_ortho_hcurl.h  adapt_ortho_l2.cpp  adapt_ortho_l2.h  adapt_result.cpp  adapt_result.h  array.h  asmlist.h  auto_local_array.h  common.cpp  common.h  common_time_period.cpp  common_time_period.h  compat.h  config.h  config.h.cmake  config.h.in  curved.cpp  curved.h  discrete.cpp  discrete_problem.cpp  discrete_problem.h  element_to_refine.h  exodusii.h  feproblem.cpp  feproblem.h  filter.cpp  filter.h  forms.cpp  forms.h  function.h  (+123 more)
tutorial/: CMake.common  CMakeLists.txt
(+780 files in other folders)
