find_package(JUDY REQUIRED)
include_directories(${JUDY_INCLUDE_DIR})
find_package(UMFPACK REQUIRED)
if(NOT UMFPACK_NO_BLAS)
	enable_language(Fortran)
	find_package(BLAS REQUIRED)
endif(NOT UMFPACK_NO_BLAS)

# examples
add_subdirectory(lshape)
add_subdirectory(layer)
add_subdirectory(smooth-iso)
add_subdirectory(smooth-aniso-x)
add_subdirectory(smooth-aniso-y)
add_subdirectory(singpert-aniso)
add_subdirectory(line-sing)
add_subdirectory(kellogg)
add_subdirectory(lshape-square)
add_subdirectory(bessel)
add_subdirectory(screen)

