enable_language(Fortran)
find_package(JUDY REQUIRED)
include_directories(${JUDY_INCLUDE_DIR})
find_package(UMFPACK REQUIRED)
find_package(BLAS REQUIRED)

# examples
add_subdirectory(multimesh)
add_subdirectory(lshape)
add_subdirectory(layer)
add_subdirectory(singpert)
add_subdirectory(bessel)
add_subdirectory(screen)
add_subdirectory(crack)
add_subdirectory(waveguide)
add_subdirectory(ns-timedep)
add_subdirectory(newton-elliptic)
add_subdirectory(newton-heat-timedep)
add_subdirectory(newton-heat-timedep-adapt)
add_subdirectory(newton-gp-timedep)
add_subdirectory(newton-gp-timedep-adapt)
add_subdirectory(newton-ns-timedep)
add_subdirectory(ns-timedep-adapt)
add_subdirectory(hdiv)
add_subdirectory(l2)
add_subdirectory(smooth)
add_subdirectory(newton-combust)
add_subdirectory(line-sing)
add_subdirectory(kellogg)

