find_package(JUDY REQUIRED)
include_directories(${JUDY_INCLUDE_DIR})
find_package(UMFPACK REQUIRED)
if(NOT UMFPACK_NO_BLAS)
	enable_language(Fortran)
	find_package(BLAS REQUIRED)
endif(NOT UMFPACK_NO_BLAS)

# examples
add_subdirectory(multimesh)
add_subdirectory(crack)
add_subdirectory(ns-timedep)
add_subdirectory(newton-heat-timedep)
add_subdirectory(newton-heat-timedep-adapt)
add_subdirectory(newton-ns-timedep)
add_subdirectory(ns-timedep-adapt)
add_subdirectory(hdiv)
add_subdirectory(l2)
add_subdirectory(newton-combust)
add_subdirectory(newton-np-timedep-adapt-system)
add_subdirectory(iron-water)
add_subdirectory(saphir)
add_subdirectory(wire)
add_subdirectory(waveguide)
add_subdirectory(newton-gp-timedep)
add_subdirectory(newton-gp-timedep-adapt)

if(WITH_TRILINOS)
  add_subdirectory(trilinos-linear)
  add_subdirectory(trilinos-nonlinear)
  add_subdirectory(trilinos-timedep)
  add_subdirectory(trilinos-adapt)
  add_subdirectory(trilinos-coupled)
endif(WITH_TRILINOS)
