find_package(JUDY REQUIRED)
include_directories(${JUDY_INCLUDE_DIR})

# examples
add_subdirectory(bracket)
add_subdirectory(crack)
add_subdirectory(newton-np-timedep-adapt-system)
add_subdirectory(iron-water)
add_subdirectory(saphir)
add_subdirectory(thermoelasticity)
add_subdirectory(waveguide)
add_subdirectory(wire)
add_subdirectory(linear-advection-diffusion)
add_subdirectory(ns-timedep-adapt)
add_subdirectory(neutronics-4-group)
add_subdirectory(neutronics-4-group-adapt)
add_subdirectory(singular-perturbation)
add_subdirectory(ns-spheres)
