find_package(JUDY REQUIRED)
include_directories(${JUDY_INCLUDE_DIR})

# examples
add_subdirectory(01-mesh)
add_subdirectory(02-space)
add_subdirectory(03-poisson)
add_subdirectory(04-bc-dirichlet)
add_subdirectory(05-bc-neumann)
add_subdirectory(06-bc-newton)
add_subdirectory(07-general)
add_subdirectory(08-system)
add_subdirectory(09-timedep)
add_subdirectory(10-adapt)
add_subdirectory(11-system-adapt)
add_subdirectory(12-general-adapt)
add_subdirectory(13-complex-adapt)
add_subdirectory(14-hcurl-adapt)
add_subdirectory(15-newton-elliptic-1)
add_subdirectory(16-newton-elliptic-2)
add_subdirectory(17-newton-elliptic-adapt)
add_subdirectory(30-space-hcurl)
add_subdirectory(31-space-hdiv)
add_subdirectory(32-space-l2)
