project(copy)

add_executable(${PROJECT_NAME} main.cpp)
include (../../../examples/CMake.common)

set(BIN ${PROJECT_BINARY_DIR}/${PROJECT_NAME})
add_test(copy-1 sh -c "${BIN} domain.mesh 1")
add_test(copy-2 sh -c "${BIN} bracket.mesh 1")
add_test(copy-3 sh -c "${BIN} square.mesh 1")
add_test(copy-4 sh -c "${BIN} square_tri.mesh 1")
add_test(copy_base-1 sh -c "${BIN} domain.mesh 2")
add_test(copy_base-2 sh -c "${BIN} bracket.mesh 2")
add_test(copy_base-3 sh -c "${BIN} square.mesh 2")
add_test(copy_base-4 sh -c "${BIN} square_tri.mesh 2")
add_test(copy_refine-1 sh -c "${BIN} domain.mesh 3")
add_test(copy_refine-2 sh -c "${BIN} bracket.mesh 3")
add_test(copy_refine-3 sh -c "${BIN} square.mesh 3")
add_test(copy_refine-4 sh -c "${BIN} square_tri.mesh 3")
